--- a/src/package.json
+++ b/src/package.json
@@ -2,9 +2,9 @@
     "name": "regionfolder",
     "displayName": "#region folding for VS Code",
     "description": "",
-    "version": "0.0.1",
-    "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/ReadMe.md",
-    "repository": "https://github.com/woodced/Maptz.VSCode.Extensions.customfolding",
+    "version": "0.0.2",
+    "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/src/ReadMe.md",
+    "repository": "https://github.com/maptz/Maptz.VSCode.Extensions.customfolding",
     "publisher": "maptz",
     "engines": {
         "vscode": "^1.24.0"
