--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,9 @@
 {
     "name": "regionfolder",
     "displayName": "#region folding for VS Code",
-    "description": "",
-    "version": "0.0.2",
-    "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/src/ReadMe.md",
+    "description": "Provides folding for text wrapped with #region comments in VS Code.",
+    "version": "0.0.3",
+    "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/ReadMe.md",
     "repository": "https://github.com/maptz/Maptz.VSCode.Extensions.customfolding",
     "publisher": "maptz",
     "engines": {
