--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -8,4 +8,7 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off"
+    "files.exclude": {
+        "node_modules": true
+    }
 }
