Updated configuration mechanism

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "regionfolder",
     "displayName": "#region folding for VS Code",
     "description": "Provides folding for text wrapped with #region comments in VS Code.",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/ReadMe.md",
     "repository": "https://github.com/maptz/Maptz.VSCode.Extensions.customfolding",
     "publisher": "maptz",
@@ -15,7 +15,7 @@
     "activationEvents": [
         "*"
     ],
-    "icon": "imgs/Icon.png",
+    "icon": "https://raw.githubusercontent.com/maptz/maptz.vscode.extensions.customfolding/master/imgs/Icon.png",
     "main": "./out/extension",
     "contributes": {
         "commands": [
@@ -30,7 +30,22 @@
                 "key": "ctrl+m ctrl+r",
                 "when": "editorTextFocus"
             }
-        ]
+        ],
+        "configuration":{
+            "title": "Maptz region folding configuration",
+            "type": "object",
+            "properties": {
+                "maptz.regionfolder":{
+                    "type":"object",
+                    "description":"Settings used for custom folding.",
+                    "default": {
+                    }
+                }
+            }
+        },
+        "configurationDefaults": {
+            
+        }
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
