--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "regionfolder",
     "displayName": "#region folding for VS Code",
     "description": "Provides folding for text wrapped with #region comments in VS Code.",
-    "version": "1.0.3",
+    "version": "1.0.4",
     "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/ReadMe.md",
     "repository": "https://github.com/maptz/Maptz.VSCode.Extensions.customfolding",
     "publisher": "maptz",
@@ -22,6 +22,10 @@
             {
                 "command": "regionfolder.collapseAllRegions",
                 "title": "Collapse all #regions"
+            },
+            {
+                "command": "regionfolder.wrapWithRegion",
+                "title": "Wraps the current selection with collapsible region comments."
             }
         ],
         "keybindings": [
