--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 // Place your settings in this file to overwrite default and user settings.
 {
     "files.exclude": {
+        "node_modules": true,
         "out": false // set this to true to hide the "out" folder with the compiled JS files
     },
     "search.exclude": {
@@ -8,7 +9,4 @@
     },
     // Turn off tsc task auto detection since we have the necessary tasks as npm scripts
     "typescript.tsc.autoDetect": "off"
-    "files.exclude": {
-        "node_modules": true
-    }
 }
