--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "regionfolder",
     "displayName": "#region folding for VS Code",
     "description": "Provides folding for text wrapped with #region comments in VS Code.",
-    "version": "1.0.5",
+    "version": "1.0.6",
     "homepage": "https://raw.githubusercontent.com/maptz/Maptz.VSCode.Extensions.customfolding/master/ReadMe.md",
     "repository": "https://github.com/maptz/Maptz.VSCode.Extensions.customfolding",
     "publisher": "maptz",
@@ -35,21 +35,18 @@
                 "when": "editorTextFocus"
             }
         ],
-        "configuration":{
+        "configuration": {
             "title": "Maptz region folding configuration",
             "type": "object",
             "properties": {
-                "maptz.regionfolder":{
-                    "type":"object",
-                    "description":"Settings used for custom folding.",
-                    "default": {
-                    }
+                "maptz.regionfolder": {
+                    "type": "object",
+                    "description": "Settings used for custom folding.",
+                    "default": {}
                 }
             }
         },
-        "configurationDefaults": {
-
-        }
+        "configurationDefaults": {}
     },
     "scripts": {
         "vscode:prepublish": "npm run compile",
