--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "Other"
     ],
     "activationEvents": [
-        "*"
+        "onStartupFinished"
     ],
     "icon": "imgs/Icon.png",
     "main": "./out/extension",
